[package]
name = "shadow_music_cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
log = "0.4.14"
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
xxhash-rust = { version = "0.8.3", features = ["xxh3"]}
audiotags = "0.2.7182"
walkdir = "2.3.2"
once_cell = "1.10.0"
anyhow = "1.0.56"
thiserror = "1.0.30"
ffmpeg-next = "5.0.3"
cuna = "0.6.3"
sled = "0.34.7"
base62 = "1.1.5"
radix_fmt = "1.0.0"
rayon = "1.5.1"
num_cpus = "1.13.1"